progress with scaffolding

--- a/contracts/bitocracy/index.html
+++ b/contracts/bitocracy/index.html
@@ -6,7 +6,7 @@ web3.eth.defaultAccount = web3.eth.accounts[0];
 function getVote() {
 	var param = document.getElementById('query').value;
 	var voteSelection = contracts['Election'].contract.getVote();
-	document.getElementById('queryres').innerText = voteSelection;
+	document.getElementById('queryresult').innerText = voteSelection;
 }
 
 function vote(choice) {
@@ -15,7 +15,6 @@ function vote(choice) {
 	
 window.onload = function() {
 	document.getElementById('voteBtn').addEventListener('click', function() {
-		alert('click');
 		var choice = document.getElementById('choice').value;
 		vote(choice);
 	});
@@ -32,8 +31,8 @@ Vote:
 </div>
 <div>
 Check my vote:
-	<input value='Check my Vote' type='button' id='query' onclick='getVote()' />
-	<div id='queryres'></div>
+	<input value='Check my Vote' type='button' id='query' />
+	<div id='queryresult'></div>
 </div>
 </body>
 </html>
